; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_notes.c_git_config_get_notes_strategy.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_notes.c_git_config_get_notes_strategy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"unknown notes merge strategy %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @git_config_get_notes_strategy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @git_config_get_notes_strategy(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i64 @git_config_get_string(i8* %7, i8** %6)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %24

11:                                               ; preds = %2
  %12 = load i8*, i8** %6, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i64 @parse_notes_merge_strategy(i8* %12, i32* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %11
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @_(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @git_die_config(i8* %17, i32 %18, i8* %19)
  br label %21

21:                                               ; preds = %16, %11
  %22 = load i8*, i8** %6, align 8
  %23 = call i32 @free(i8* %22)
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %21, %10
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i64 @git_config_get_string(i8*, i8**) #1

declare dso_local i64 @parse_notes_merge_strategy(i8*, i32*) #1

declare dso_local i32 @git_die_config(i8*, i32, i8*) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
